--- a/src/components/layout/PageNav/PageNav.scss
+++ b/src/components/layout/PageNav/PageNav.scss
@@ -10,10 +10,12 @@ nav {
 
 h2{
   display: flex;
+  color: rgba($color: #02020e, $alpha: 1.0)
 }
 
 a{
   margin: 0 10px 0 0;
   display: inline;
   padding: 5px;
+  color:rgba($color: #130602, $alpha: 1.0)
 }
