--- a/src/components/layout/PageNav/PageNav.scss
+++ b/src/components/layout/PageNav/PageNav.scss
@@ -1,7 +1,13 @@
+@import '../../../styles/settings.scss';
+
+.component {
+  padding: $base-size;
+}
+
 nav {
   width: 100%;
   height: 60px;
-  background-color: rgba(14, 118, 236, 0.493);
+  background-color: #b0bec5;
   font-size: 20px;
   display: flex;
   align-items: center;
@@ -16,6 +22,6 @@ h2{
 a{
   margin: 0 10px 0 0;
   display: inline;
-  padding: 5px;
+  padding: 0;
   color:rgba($color: #130602, $alpha: 1.0)
 }
